--- a/src/assets/style/header.scss
+++ b/src/assets/style/header.scss
@@ -13,16 +13,6 @@
   .header {
     height: 120px;
   }
-  .india-map{
-    width: 100%;
-  }
-  .total-count-div{
-    width: 100%;
-    justify-content: center;
-  }
-  .multiple-chart-sideway{
-    width: 100%;
-  }
 }
 
 
